--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -66,9 +66,10 @@
 
 \begin{tabular}{rl}
   \textsc{Place and Date of Birth:} & Czech Republic  | 16 August 1991 \\
-  \textsc{Address:} & Newaldgasse 3, Top 32, Vienna, Austria \\
+  %% \textsc{Address:} & Newaldgasse 3, Top 32, Vienna, Austria \\
   \textsc{Phone:} & +43 681 20591468\\
-  \textsc{email:} & \href{mailto:tskrivan@ist.ac.at}{tskrivan@ist.ac.at}
+  \textsc{Email:} & \href{mailto:skrivantomas@gmail.com}{skrivantomas@gmail.com} \\
+  \textsc{Personal Website:} & \href{https://lecopivo.github.io/}{lecopivo.github.io}
 \end{tabular}
 
 
@@ -80,8 +81,8 @@
 
 \begin{tabular}{rl}
   
-  \emph{Current} & \textbf{IST Austria}\\
-  2016           & Doctoral study in computer graphics \\
+  \emph{Discontinued} & \textbf{IST Austria}\\
+  2016 - 2020    & Doctoral study in computer graphics \\
                  & Advisor: Chris Wojtan \\
                  &\\
 
@@ -104,38 +105,18 @@
 \end{tabular}
 
 % ----------------------------------------------------------------------------------------
-%	EDUCATION
+%	EXPERIENCE
 % ----------------------------------------------------------------------------------------
 
-\section{Education}
+\section{Experience}
 
 \begin{tabular}{rl}
   
-  \emph{Current} & \textbf{IST Austria}\\
-  2016           & Doctoral study in computer graphics \\
-                 & Advisor: Chris Wojtan \\
-                 &\\
-
-                 % ------------------------------------------------
+  Nov 2018 - Feb 2019 & \textbf{Weta Digital} \\
+                      & Simulation Intern \\
+                      &\\
   
-  2014 - 2016 & \textbf{Charles University}, Faculty of Mathematics and Physics \\
-                 & Master study program: \emph{Mathematical Modelling in Physics and Technology} \\
-                 & Thesis: \emph{Shear and vorticity banding} \\
-                 & Advisor: Vít Průša \\
-                 &\\
-  
-                 % ------------------------------------------------
-
-  2010 - 2014 & \textbf{Charles University}, Faculty of Mathematics and Physics \\
-                 & Bachelor study program: \emph{Mathematics} \\
-                 & Thesis: \emph{3D Texture deformation according to a polygonal model} \\
-                 & Advisor: Jaroslav Křivánek \\
-                 &\\
-
 \end{tabular}
-
-
-
 
 % ----------------------------------------------------------------------------------------
 %	Publications
@@ -144,6 +125,10 @@
 \section{Publications}
 
 \begin{itemize}
+\item \bibentry{skrivan2020wave}
+\item \bibentry{kondapaneni2019optimal}
+\item \bibentry{karlik2019mis}
+\item \bibentry{dostalik2019diffusive}
 \item \bibentry{jeschke2018water}
 \item \bibentry{malek2018thermodynamics}
 \item \bibentry{mojzik2016bi}
@@ -172,8 +157,8 @@
 
 \begin{tabular}{rl}
   \textsc{Languages}:   & Czech(native), English(fluent) \\
-  \textsc{Programming}: & C++, Python, Maya API, Houdini VEX, FEniCS \\
-  \textsc{Software}:    & Matlab, Mathematica, Maya, 3ds Max, Houdini, Zbrush
+  \textsc{Programming}: & C++, D, Python, Houdini VEX, Coq\\
+  \textsc{Software}:    & Git, CMake, Mathematica, Houdini, Emacs
 \end{tabular}
 
 % ----------------------------------------------------------------------------------------
