--- a/cv/publications.bib
+++ b/cv/publications.bib
@@ -1,30 +1,72 @@
 @article{malek2018thermodynamics,
-  title={Thermodynamics of viscoelastic rate-type fluids with stress diffusion},
-  author={M{\'a}lek, Josef and Pru{\v{s}}a, V{\'\i}t and Sk{\v{r}}ivan, Tom{\'a}{\v{s}} and S{\"u}li, Endre},
-  journal={Physics of Fluids},
-  volume={30},
-  number={2},
-  pages={023101},
-  year={2018},
-  publisher={AIP Publishing}
+  title =	 {Thermodynamics of viscoelastic rate-type fluids with stress diffusion},
+  author =	 {M{\'a}lek, Josef and Prů{\v{s}}a, V{\'\i}t and Sk{\v{r}}ivan, Tom{\'a}{\v{s}} and S{\"u}li, Endre},
+  journal =	 {Physics of Fluids},
+  volume =	 30,
+  number =	 2,
+  pages =	 023101,
+  year =	 2018,
+  publisher =	 {AIP Publishing LLC}
 }
 
 @article{jeschke2018water,
-  title={Water surface wavelets},
-  author={Jeschke, Stefan and Sk{\v{r}}ivan, Tom{\'a}{\v{s}} and M{\"u}ller-Fischer, Matthias and Chentanez, Nuttapong and Macklin, Miles and Wojtan, Chris},
-  journal={ACM Transactions on Graphics (TOG)},
-  volume={37},
-  number={4},
-  pages={94},
-  year={2018},
-  publisher={ACM}
+  title =	 {Water surface wavelets},
+  author =	 {Jeschke, Stefan and Sk{\v{r}}ivan, Tom{\'a}{\v{s}} and M{\"u}ller-Fischer, Matthias and Chentanez, Nuttapong and Macklin, Miles and Wojtan, Chris},
+  journal =	 {ACM Transactions on Graphics (TOG)},
+  volume =	 37,
+  number =	 4,
+  pages =	 {1--13},
+  year =	 2018,
+  publisher =	 {ACM New York, NY, USA}
 }
 
 @inproceedings{mojzik2016bi,
-  title={Bi-directional polarised light transport},
-  author={Mojz{\'\i}k, Michal and Sk{\v{r}}ivan, Tom{\'a}{\v{s}} and Wilkie, Alexander and K{\v{r}}iv{\'a}nek, Jaroslav},
-  booktitle={Proceedings of the Eurographics Symposium on Rendering: Experimental Ideas \& Implementations},
-  pages={97--108},
-  year={2016},
-  organization={Eurographics Association}
+  title =	 {Bi-Directional Polarised Light Transport.},
+  author =	 {Mojz{\'\i}k, Michal and Sk{\v{r}}rivan, Tom{\'a}s and Wilkie, Alexander and K{\v{r}}iv{\'a}nek, Jaroslav},
+  booktitle =	 {EGSR (EI\&I)},
+  pages =	 {97--108},
+  year =	 2016
+}
+
+@inproceedings{dostalik2019diffusive,
+  title =	 {On diffusive variants of some classical viscoelastic rate-type models},
+  author =	 {Dostal{\'\i}k, Mark and Prů{\v{s}}a, V{\'\i}t and Sk{\v{r}}ivan, Tom{\'a}{\v{s}}},
+  booktitle =	 {AIP Conference Proceedings},
+  volume =	 2107,
+  number =	 1,
+  pages =	 020002,
+  year =	 2019,
+  organization = {AIP Publishing LLC}
+}
+
+@article{kondapaneni2019optimal,
+  title =	 {Optimal multiple importance sampling},
+  author =	 {Kondapaneni, Ivo and V{\'e}voda, Petr and Grittmann, Pascal and Sk{\v{r}}ivan, Tom{\'a}{\v{s}} and Slusallek, Philipp and K{\v{r}}iv{\'a}nek, Jaroslav},
+  journal =	 {ACM Transactions on Graphics (TOG)},
+  volume =	 38,
+  number =	 4,
+  pages =	 {1--14},
+  year =	 2019,
+  publisher =	 {ACM New York, NY, USA}
+}
+
+@article{karlik2019mis,
+  title =	 {MIS compensation: Optimizing sampling techniques in multiple importance sampling},
+  author =	 {Karl{\'\i}k, Ond{\v{r}}ej and {\v{S}}ik, Martin and V{\'e}voda, Petr and Sk{\v{r}}ivan, Tom{\'a}{\v{s}} and K{\v{r}}iv{\'a}nek, Jaroslav},
+  journal =	 {ACM Transactions on Graphics (TOG)},
+  volume =	 38,
+  number =	 6,
+  pages =	 {1--12},
+  year =	 2019,
+  publisher =	 {ACM New York, NY, USA}
+}
+
+@article{skrivan2020wave,
+  title =	 {Wave Curves: Simulating Lagrangian water waves on dynamically deforming surfaces },
+  author =	 {Sk{\v{r}}ivan, Tom{\'a}{\v{s}} and Söderström, Andreas and Johansson, John and Sprenger, Christoph and Museth, Ken and Wojtan, Chris},
+  journal =	 {ACM Transactions on Graphics (TOG)},
+  number =	 4,
+  volume =	 39,
+  year =	 2020,
+  publisher =	 {ACM}
 }
